--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easy-music-bot",
   "version": "1.0.0",
-  "repository": "https://github.com/newmanshee/EasyMusicBot.git",
+  "repository": "https://github.com/zhangyang223/YangYangBot.git",
   "description": "An easy discord music bot",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "music",
     "bot"
   ],
-  "author": "Newman Shee",
+  "author": "Zhang Yang",
   "license": "MIT",
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
