added more info

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,13 @@ name: YangYangBot Run
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#  schedule:
+#    # * is a special character in YAML so you have to quote this string
+#    - cron:  '0 */6 * * *'
+#   status:
+#     branches: [ master ]
 
 jobs:
   build:
