--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
 #    branches: [ master ]
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '33 2/1 ? * *'
+    - cron:  '35 * ? * *'
 #   status:
 #     branches: [ master ]
 
