--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,15 +4,9 @@
 name: YangYangBot Run
 
 on:
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '* * * * *'
-#   status:
-#     branches: [ master ]
+    - cron:  '*/2 * * * *'
 
 jobs:
   build:
