--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,15 @@
 name: YangYangBot Run
 
 on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/2 * * * *'
+    - cron:  '*/10 * * * *'
+#   status:
+#     branches: [ master ]
 
 jobs:
   build:
