--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,13 +4,13 @@
 name: YangYangBot Run
 
 on:
-#  push:
-#    branches: [ master ]
+  push:
+    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '*/10 * * * *'
+#  schedule:
+#    # * is a special character in YAML so you have to quote this string
+#    - cron:  '*/10 * * * *'
 #   status:
 #     branches: [ master ]
 
