--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
 #    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-#  schedule:
+  schedule:
     - cron:  '*/10 * * * *'
 #   status:
 #     branches: [ master ]
