--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
 #  pull_request:
 #    branches: [ master ]
   schedule:
-    - cron:  '6 * * * *'
+    - cron:  '6 */2 * * *'
 #   status:
 #     branches: [ master ]
 
