--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "optimist": "0.6.1",
     "request": "2.69.0",
     "request-promise": "^4.2.5",
+    "request-promise-native": "^1.0.8",
     "soupselect": "0.2.0",
     "underscore": "1.8.3",
     "ytdl-core": ">=2.1.5"
