--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        node-version: [12.x]
+        node-version: [12.16.x, 12.16.1]
 
     steps:
     - uses: actions/checkout@v2
