--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,12 +4,12 @@
 name: YangYangBot Run
 
 on:
-#  push:
-#    branches: [ master ]
+  push:
+    branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
   schedule:
-    - cron:  '8 0/6 * * *'
+    - cron:  '10 0/6 * * *'
 #   status:
 #     branches: [ master ]
 
