--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@ksoft/api": "^3.1.9",
     "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^12.0.2",
+    "discord.js": "^12.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
-    "google-auth-library": "^6.0.0",
+    "google-auth-library": "^6.0.2",
     "googleapis": "^51.0.0",
     "htmlparser": "1.7.7",
     "iconv-lite": "^0.6.0",
@@ -34,6 +34,6 @@
     "request-promise-native": "^1.0.8",
     "soupselect": "0.2.0",
     "underscore": "1.8.3",
-    "ytdl-core": ">=2.1.5"
+    "ytdl-core": "^2.1.7"
   }
 }
