added search based on text.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ npm-debug.log
 client_secret_962603753191-3o0u03pi75oid7a3161efn4kl2sqvlu8.apps.googleusercontent.com.json
 MyProject-b427ed78b81d.json
 secrets
+test/data/*
+test/result/*
+test/curlTest.bat
