--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,8 +8,8 @@ on:
     branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-  schedule:
-    - cron:  '10 0/6 * * *'
+#  schedule:
+#    - cron:  '10 0/6 * * *'
 #   status:
 #     branches: [ master ]
 
@@ -30,4 +30,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: node index.js
+    - run: npm test
+#    - run: node index.js
