--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm test
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: test/notes.txt
 #    - run: node index.js
