added back the main run

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: node.js
     - uses: actions/upload-artifact@v2
       with:
         name: my-artifact
