--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: node index.js
-#    - uses: actions/upload-artifact@v2
-#      with:
-#        name: my-artifact
-#        path: test/notes.txt
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: test/notes.txt
 
