--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,6 @@ jobs:
     - run: node index.js
     - uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
-        path: test/notes.txt
+        name: songdata
+        path: dbdata/
 
