--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - uses: actions/download-artifact@v2
+      with:
+        name: songdata
+        path: dbdata/
     - run: node index.js
     - uses: actions/upload-artifact@v2
       with:
