--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,15 +35,15 @@ jobs:
 #      with:
 #        name: songdata
 #        path: dbdata/
-    - uses: actions/download-artifact@v2
-      with:
-        name: songdata
-        path: dbdata/
+#    - uses: actions/download-artifact@v2
+#      with:
+#        name: songdata
+#        path: dbdata/
     - run: node index.js
       if: ${{true}}
-    - uses: actions/upload-artifact@v2
-      if: ${{true}}
-      with:
-        name: songdata
-        path: dbdata/
+#    - uses: actions/upload-artifact@v2
+#      if: ${{true}}
+#      with:
+#        name: songdata
+#        path: dbdata/
 
