--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,8 @@ jobs:
       max-parallel: 1
       matrix:
         node-version: [12.x]
-
+    env: # Or as an environment variable
+      DISCORD_TOKEN: ${{ DISCORD_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
