--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 node_modules
 npm-debug.log
 .github
-.vscode/*
 client_secret_962603753191-3o0u03pi75oid7a3161efn4kl2sqvlu8.apps.googleusercontent.com.json
 MyProject-b427ed78b81d.json
 secrets
 test/data/*
 test/result/*
 test/curlTest.bat
+.axoCover/*
+.DS_Store
+.sfdx
+.vscode
