--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
         node-version: [12.x]
     env: # Or as an environment variable
       DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
+      KSOFT_TOKEN: ${{ secrets.KSFOT_TOKEN }}
     steps:
     - uses: actions/checkout@v2
       with:
