--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: YangYangBot Run
+name: EmilyMusicBot Run
 
 on:
   push:
@@ -9,7 +9,8 @@ on:
 #  pull_request:
 #    branches: [ master ]
   schedule:
-    - cron:  '10 0/6 * * *'
+### TODO: Uncomment the next line to start the run
+###    - cron:  '10 0/6 * * *'
 #   status:
 #     branches: [ master ]
 
