--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
 #  pull_request:
 #    branches: [ master ]
   schedule:
-    - cron:  '8 0/6 * * *'
+    ###- cron:  '8 0/6 * * *'
 #   status:
 #     branches: [ master ]
 
